# ante-preview

./: CHANGELOG.md  README.md  install.sh
.github/ante/: ante_agent.py
.github/workflows/: ante-harbor-test.yml
crates/agent-sdk/: Cargo.toml
crates/exec/src/: buffer.rs  handle.rs  lib.rs  process_group.rs  subprocess.rs  tests.rs
crates/protocol/: Cargo.toml
crates/protocol-shape/src/: msg.rs
crates/protocol/src/: id.rs  msg.rs
docs/: _config.yml  agent-org.mdx  docs.json  offline.mdx  tools.mdx
docs-site/: docusaurus.config.ts  sidebars.ts
docs-site/docs/: offline.mdx  tools.mdx
docs-site/docs/antix/: concepts.md  introduction.md  quickstart.md
docs-site/docs/benchmarks/: eval.mdx
docs-site/docs/concepts/: architecture.mdx  core-concepts.mdx  protocol.mdx
docs-site/docs/configuration/: permission.mdx  preference.mdx  providers.mdx
docs-site/docs/extend/: memory.mdx
docs-site/docs/reference/: cli-reference.mdx  protocol-reference.mdx  tools-reference.mdx
docs-site/docs/start/: overview.mdx  quickstart.mdx  update.mdx
docs-site/docs/usage/: headless.mdx  serve.mdx  tui.mdx
docs/concepts/: architecture.mdx  core-concepts.mdx  protocol.mdx
docs/configuration/: catalog.mdx  permission.mdx  preference.mdx  providers.mdx  third-party-provider.mdx
docs/extend/: skills.mdx
docs/start/: eval.mdx  overview.mdx  philosophy.mdx  quickstart.mdx
docs/usage/: headless.mdx  serve.mdx  tui.mdx
gh-pages/: index.md
website/: docusaurus.config.ts  package-lock.json  package.json  vocs.config.ts
website/docs/: styles.css
(+19 files in other folders)
